6.3.0 (23-11-2019)
- Refactor: Upgraded dependency of fenixedu-academic-core

6.2.0 (21-11-2019)
- Refactor: Included new access control Permissions to existing AcademicAuthorizations

6.1.1 (08-11-2019)
- Improvement: added ISEG/ISCSP qualitative grades
- Improvement: Add curricular plan column to the student's report in the MoodleExportController #UL-FF-1835

6.1.0 (22-10-2019)
- Refactor: Invocation of method factory for Registration creation

6.0.1 (17-10-2019)
- Improvement: adding validations to the EECC table generation.

6.0.0 (11-10-2019)
- Improvement: added export options to service requests search screen
- Improvement: display emergency contact in student personal details and export in registration history report
- Refactor: changed MobilityRegistatrionUlisboaInformation domain relations from ExecutionSemester to ExecutionInterval
- Refactor: Upgrade dependency of fenixedu-academic-extensions (changed domain relations from ExecutionSemester to ExecutionInterval)

5.5.4 (07-10-2019)
- Fix: Print program conclusion - hide left menu ( #UL-ISA-1056 )

5.5.3 (02-10-2019)
- Fix: Curriculum aggregator entry line search should exclude annuled enrolments ( #UL-FM-1540 )

5.5.2 (30-09-2019)
- Fix: Remove space in student id's prefix when importing students from DGES

5.5.1 (27-09-2019)
- Fix: Fixed execution semester selection on competence course marksheet management (backoffice) 

5.5.0 (20-09-2019)
- Refactor: Upgrade dependency of fenixedu-academic-core (changed domain relations from ExecutionSemester to ExecutionInterval)

5.4.1 (16-09-2019)
5.4.0 (13-09-2019)
- Improvement: Changed servlets to have async support needed by websockets

5.3.4 (09-09-2019)
- Bug Fix: In 1A1V importation, for students already registered in the system check if default country address exists. If not create the default fiscal address before fiscal data edition in registered person.

5.3.3 (04-09-2019)